--- a/index.qmd
+++ b/index.qmd
@@ -4,12 +4,12 @@ title: ""
 
 ::: {layout="[21,79]" .profile-header}
 
-![](images/Hagai_Rossman_color.png){.profile-pic}
+![](images/ayya.png){.profile-pic}
 
-Hi 👋  
-I'm Hagai Rossman, a researcher and data scientist with a focus on health data. My interests extend into AI and biomedical data, especially at their intersection.  
-Currently, I am part of a stellar team at [Pheno.AI](https://www.pheno.ai/), where we work on projects that lie at the interface of data and health.  
-Previously, I was a Ph.D student in Computer Science at the Weizmann Institute of Science, [Segal lab](https://genie.weizmann.ac.il).
+I'm Ayya Keshet, a researcher and data scientist, focusing on health data.
+Currently a PhD student in Computer Science at the Weizmann Institute of Science, [Segal lab](https://genie.weizmann.ac.il), expected to graduate this year.
+I also work part time as a data scientist at [Pheno.AI](https://www.pheno.ai/).
+My passion is utilizing computational and statistical tools, along with health and biomedical data, to improve medical knowledge and care.
 
 :::
 
