--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ title: ""
 
 ::: {layout="[21,79]" .profile-header}
 
-<img src="images/ayya.jpg" alt="Profile Picture" style="width: 280px !important; height: auto !important; border-radius: 10%; display: block; margin: 0 auto;">
+![](images/ayya.jpg){.profile-pic}
 
 I'm Ayya Keshet, a researcher and data scientist, focusing on health data.<br>
 Currently a PhD student in Computer Science at the Weizmann Institute of Science, [Segal lab](https://genie.weizmann.ac.il), expected to graduate this year.<br>
